[package]
name = "rust_md_site_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.0"
pulldown-cmark = "0.9"
glob = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
tiny_http = "0.8"
